--- a/EVsales/EV_sales_as_Economist.Rmd
+++ b/EVsales/EV_sales_as_Economist.Rmd
@@ -4,6 +4,7 @@ author: "Pujen Shrestha"
 date: '2022-12-28'
 output: html_document
 ---
+# EV Econ Plot
 Original idea adapted from work by Tanesya which can be found at https://rpubs.com/tangerine/economist-plot
 
 ```{r setup, include=FALSE}
